--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
 
+    // circle image view
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
     def koin_version = '2.0.1'
 
 // Koin for Kotlin (androidX)
@@ -57,7 +60,7 @@ dependencies {
     implementation "org.koin:koin-androidx-ext:$koin_version"
 
     // network
-    def retrofit_version='2.6.0'
+    def retrofit_version = '2.6.0'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
@@ -67,7 +70,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     // util
-    def anko_version='0.10.8'
+    def anko_version = '0.10.8'
 
 // Anko Commons
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
