--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-
+    implementation "com.squareup.retrofit2:retrofit-mock:$retrofit_version"
     implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
