--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.archive.ArchiveActivity">
-
-        </activity>
-        <activity android:name=".ui.home.HomeActivity">
+        <activity android:name=".ui.search.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ui.archive.ArchiveActivity"></activity>
+        <activity android:name=".ui.home.HomeActivity">
+
+        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
