--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,6 @@ dependencies {
 
     //design
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:percent:28.0.0'
 
 }
