--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.login.login_start.LoginStartActivity"> </activity>
-        <activity android:name=".ui.signup.SignupPrivateActivity"></activity>
-        <activity android:name=".ui.signup.SignupLoginActivity" />
-        <activity android:name=".ui.home.artic_pick.ArticPickActivity">
+        <activity android:name=".ui.login.login_start.LoginStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.signup.SignupPrivateActivity"></activity>
+        <activity android:name=".ui.signup.SignupLoginActivity" />
+        <activity android:name=".ui.home.artic_pick.ArticPickActivity">
+
         </activity>
         <activity android:name=".ui.login.login.LoginActivity">
 
