--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,7 @@
         <activity android:name=".ui.signup.SignupPrivateActivity"></activity>
         <activity android:name=".ui.signup.SignupLoginActivity" />
         <activity android:name=".ui.home.artic_pick.ArticPickActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.home.new_article_link.NewArticleLinkActivity" />
         <activity android:name=".ui.search_result.SearchResultActivity" />
@@ -31,9 +27,23 @@
             android:name=".ui.link.LinkActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.category.CategoryActivity" />
-        <activity android:name=".ui.home.HomeActivity" />
-        <activity android:name=".ui.archive.ArchiveActivity" />
+        <activity android:name=".ui.home.HomeActivity">
+
+        </activity>
+        <activity android:name=".ui.archive.ArchiveActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.article_about.ArticleAboutActivity">
+
+        </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".ui.detail_new_archive.DetailNewArchiveActivity">
+
+        </activity>
     </application>
 
 </manifest>
