--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,14 @@
 
         </activity>
         <activity android:name=".ui.signup.signup_start.SignupStartActivity" />
-        <activity android:name=".ui.login.login_start.LoginStartActivity"></activity>
+        <activity android:name=".ui.login.login_start.LoginStartActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.article_about.ArticleAboutActivity"></activity>
         <activity android:name=".ui.signup.signup.SignupPrivateActivity" />
         <activity android:name=".ui.signup.signup.SignupLoginActivity" />
         <activity android:name=".ui.detail_artic_pick.ArticPickActivity" />
@@ -35,11 +42,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.category.CategoryActivity" />
         <activity android:name=".ui.home.HomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.archive.ArchiveActivity" />
     </application>
