setting view and edit my profile view complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.setting.setting_editprofile.SettingEditProfileActivity"></activity>
-        <activity android:name=".ui.setting.setting.SettingActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".ui.setting.setting_editprofile.SettingEditProfileActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.setting.setting.SettingActivity" >
+
         </activity>
         <activity android:name=".ui.mypage.mypage_scrap.MyPageScrapActivity" />
         <activity android:name=".ui.signup.signup_start.SignupStartActivity" />
