--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.article_webview.ArticleWebViewActivity">
+        <activity android:name=".ui.notification.NotificationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.article_webview.ArticleWebViewActivity">
+
+        </activity>
         <activity android:name=".ui.signup.signup_start.SignupStartActivity" />
-        <activity android:name=".ui.login.login_start.LoginStartActivity"></activity>
+        <activity android:name=".ui.login.login_start.LoginStartActivity" />
         <activity android:name=".ui.signup.signup.SignupPrivateActivity" />
         <activity android:name=".ui.signup.signup.SignupLoginActivity" />
         <activity android:name=".ui.detail_artic_pick.ArticPickActivity" />
@@ -38,11 +41,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.category.CategoryActivity" />
         <activity android:name=".ui.home.HomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.archive.ArchiveActivity" />
     </application>
