--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,7 @@
         </activity>
         <activity android:name=".ui.signup.signup_start.SignupStartActivity" />
         <activity android:name=".ui.login.login_start.LoginStartActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+         </activity>
         <activity android:name=".ui.setting.setting_editprofile.SettingEditProfileActivity">
 
         </activity>
@@ -48,10 +44,16 @@
         <activity android:name=".ui.search.SearchActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".ui.article.ArticleActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.category.CategoryActivity" />
+            android:name=".ui.article.ArticleActivity">
+
+        </activity>
+
+        <activity android:name=".ui.category.CategoryActivity"/>
         <activity android:name=".ui.home.HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.archive.ArchiveActivity" />
     </application>
