--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,16 @@
         <activity android:name=".ui.new_archive.MakeNewArchiveActivity" />
         <activity android:name=".ui.article_webview.ArticleWebViewActivity" />
         <activity android:name=".ui.signup.signup_start.SignupStartActivity" />
-        <activity android:name=".ui.login.login_start.LoginStartActivity" />
-        <activity android:name=".ui.setting.setting_editprofile.SettingEditProfileActivity" />
-        <activity android:name=".ui.setting.setting.SettingActivity">
+        <activity android:name=".ui.login.login_start.LoginStartActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.setting.setting_editprofile.SettingEditProfileActivity" />
+        <activity android:name=".ui.setting.setting.SettingActivity">
+
         </activity>
         <activity android:name=".ui.mypage.mypage_scrap.MyPageScrapActivity" />
         <activity android:name=".ui.article_about.ArticleAboutActivity" />
