--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,8 @@ dependencies {
 
     // google material
     implementation 'com.google.android.material:material:1.1.0-alpha07'
+
+    // recylcer view snapHelper
+    // AndroidX
+    implementation 'com.github.rubensousa:gravitysnaphelper:2.0'
 }
