remove default facebook login progress bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.artic">
     <!-- 인터넷 접근 허용, 네트워크 상태 접근 허용, 와이파이 상태 접근 허용 Glide을 이용해 http에서 이미지를 받아오기 위해 필요한 권한 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -31,6 +32,8 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@style/Translucent"
+            tools:replace="android:theme"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
