implement splash activity!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,9 @@ dependencies {
 
     // facebook
     implementation 'com.facebook.android:facebook-login:[5,6)'
+
+    // lottie
+    def lottieVersion = '3.0.7'
+
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
