--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,6 @@ dependencies {
 
     // facebook
     implementation 'com.facebook.android:facebook-login:[5,6)'
+
+    implementation 'com.airbnb.android:lottie:2.8.0'
 }
