--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,5 @@ dependencies {
     def lottieVersion = '3.0.7'
 
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation 'com.google.android:flexbox:0.3.2'
 }
