implement update archive name
refer MakeNewArchiveActivity & use it's layout file
implement put api (archive)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SampleActivity">
-
-
-        </activity>
+        <activity android:name=".ui.edit_archive.EditArchiveActivity"></activity>
+        <activity android:name=".SampleActivity"></activity>
         <activity android:name=".ui.reset_password.ResetPasswordActivity" />
         <activity android:name=".ui.reset_password.InputAuthCodeActivity" />
         <activity android:name=".ui.reset_password.FindPasswordActivity" />
